--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="./webAPICall.js"></script>
     <!--<script src="./exercise1.js"></script> -->
     <!--<script src="./exercise2.js"></script> -->
-    <script src="./exercise3.js"></script> 
+    <!--<script src="./exercise3.js"></script> -->
+    <script src="./exercise4.js"></script>
   </body>
 </html>
